--- a/src/timeline/output.css
+++ b/src/timeline/output.css
@@ -7,13 +7,14 @@
 }
 
 section {
-  height: 100vh;
+  /* height: 100vh; */
   font-size: 40px;
   font-weight: 100;
   background-color: #22a7f0;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* padding-bottom: ; */
 }
 section:nth-child(1) {
   background: white;
