--- a/src/timeline/output.css
+++ b/src/timeline/output.css
@@ -51,7 +51,8 @@ section:nth-child(7) {
 }
 
 .nav__wrapper {
-  position: absolute;
+  position: fixed;
+
   height: 100vh;
   padding: 30px;
   width: 16vw;
@@ -62,6 +63,8 @@ section:nth-child(7) {
 .nav {
   margin: 0 0 100px 30px;
   list-style-type: none;
+  /* position: sticky;
+  top: 0%; */
 }
 .nav__counter {
   font-size: 24px;
